base structure created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,24 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["src/"],
+      "@styles/*": ["src/assets/styles/*"],
+      "@images/*": ["src/assets/images/*"],
+      "@constants/*": ["src/constants/*"],
+      "@store/*": ["src/store/*"],
+      "@models/*": ["src/models/*"],
+      "@components/*": ["src/components/*"],
+      "@features/*": ["src/features/*"],
+      "@services/*": ["src/services/*"],
+      "@router/*": ["src/router/*"],
+      "@pages/*": ["src/pages/*"]
+    }
   },
   "include": [
-    "src"
-  ]
+    "src/**/*.ts", "src/**/*.tsx"
+  ],
+  "exclude": ["node_modules"]
 }
