--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,19 +19,19 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@app/*": ["src/"],
-      "@styles/*": ["src/assets/styles/*"],
-      "@images/*": ["src/assets/images/*"],
-      "@constants/*": ["src/constants/*"],
-      "@store/*": ["src/store/*"],
-      "@models/*": ["src/models/*"],
-      "@components/*": ["src/components/*"],
-      "@features/*": ["src/features/*"],
-      "@services/*": ["src/services/*"],
-      "@router/*": ["src/router/*"],
-      "@pages/*": ["src/pages/*"]
+      "@app/*": ["*"],
+      "@styles/*": ["assets/styles/*"],
+      "@images/*": ["assets/images/*"],
+      "@constants/*": ["constants/*"],
+      "@store/*": ["store/*"],
+      "@models/*": ["models/*"],
+      "@components/*": ["components/*"],
+      "@features/*": ["features/*"],
+      "@services/*": ["services/*"],
+      "@router/*": ["router/*"],
+      "@pages/*": ["pages/*"]
     }
   },
   "include": [
