--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -58,6 +59,7 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/react-select": "^5.0.1",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.55.0",
