--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -61,6 +62,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-select": "^5.0.1",
     "@types/yup": "^0.32.0",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
