--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "formik": "^2.4.5",
@@ -16,6 +17,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
@@ -61,8 +63,8 @@
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "@types/react-select": "^5.0.1",
-    "@types/yup": "^0.32.0",
     "@types/react-table": "^7.7.20",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
