--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "formik": "^2.4.5",
@@ -22,9 +21,11 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
@@ -62,7 +63,9 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-select": "^5.0.1",
+    "@types/react-slick": "^0.23.13",
     "@types/react-table": "^7.7.20",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/parser": "^5.62.0",
